# students-project/models/student.js
@@ -1,14 +1,14 @@
 const mongoose = require('mongoose');
 
 const studentSchema = mongoose.Schema({
-  studentName: { type: String, required: true },
-  currentSchool: { type: String, required: true },
-  parentGuardian: { type: String, required: true },
-  parentContact: { type: String, required: true },
+  firstName: { type: String, required: true },
+  lastName: { type: String, required: true },
   email: { type: String, required: true, unique: true },
-  address: { type: String, required: true },
-  studentFbLink: { type: String, required: false },
-  parentFbLink: { type: String, required: false }
+  age: { type: Number, required: true },
+  major: { type: String, required: true },
+  gpa: { type: Number, required: true },
+  admissionDate: { type: String, required: true },
+  totalCredits: { type: Number, required: true }
 }, { timestamps: true });
 
 module.exports = mongoose.model('Student', studentSchema);
